
Improvements
 - Slight performance improvement in parsing by reducing the number of regexps checked in certain situations
 - The name property is removed from the syntax items in the bundle editor to better work with the Language Grammar bundle
 - Support for background colors in themes

Features
 - Command bundle items now supports changing of output type through exit codes
 - Last open windows and files are restored upon startup
 - Detect external changes to open files
 - Dialog system to be available from bundles. Includes so far, CommitDialog, error, progress, simplenotification,
   html.InsertEntity and subversion.RevisionSelector
 - Git and subversion status on files are shown as colors in the project view

Bugfixes
 - NPE whith new tabs created by bundles
 - Lots of bugfixes to make sure the subversion bundle works almost completely


Build 2010112501
------------------------------------------------------------------------------------------------------------------------

Improvements
 - First version of threaded parsing
 - Removed 2mb file size limit and increased max allocated memory to allow for bigger files
 - Changed formatting of language syntax files as being edited in the bundle editor

Bugfixes
 - Keystroke incorrectly saved in bundle editor on windows
 - Fixed exception when closing all tabs at once
 - Fixed major bug with tab and enter when having multiple windows active
 - Fixed incorrect syntax highlighting in ruby. Problem by contentName and backreferences in the end pattern
 - Couldn't edit (save) not bundle item files in bundles



Build 2010111701
------------------------------------------------------------------------------------------------------------------------

Features

Improvements
 - Install bundles dialog now shows bundles sorted alphabetically
 - Removed non-breaking space in some of the bundle item names as this cannot be displayed properly on Windows

 
Bugfixes
 - HTTP delivery of files containing spaces
 - Edit with JSourcepad